--- a/src/Login.css
+++ b/src/Login.css
@@ -36,7 +36,7 @@
     margin-top: 10rem;
 }
 
-.gmailTitle {
+.emailTitle {
     padding: 10px 10px 10px 0px;
     font-weight: 900;
     margin-left: 2.7rem;
