--- a/src/Login.css
+++ b/src/Login.css
@@ -40,5 +40,8 @@
     padding: 10px 10px 10px 0px;
     font-weight: 900;
     margin-left: 1rem;
-    
+}
+
+.microsoftTitle {
+    margin-top: 1rem;
 }
